// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Math.PI 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local ____ = math.pi
end
return ____exports"
`;

exports[`Math.cos() 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    math.cos()
end
return ____exports"
`;

exports[`Math.log1p(3) 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    math.log(1 + 3)
end
return ____exports"
`;

exports[`Math.log2(3) 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local ____ = (math.log(3) / 0.6931471805599453)
end
return ____exports"
`;

exports[`Math.log10(3) 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local ____ = (math.log(3) / 2.302585092994046)
end
return ____exports"
`;

exports[`Math.min() 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    math.min()
end
return ____exports"
`;

exports[`Math.round(3.3) 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    math.floor(3.3 + 0.5)
end
return ____exports"
`;

exports[`Math.sin() 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    math.sin()
end
return ____exports"
`;

exports[`const x = Math.log2(3) 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local x = (math.log(3) / 0.6931471805599453)
end
return ____exports"
`;

exports[`const x = Math.log10(3) 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local x = (math.log(3) / 2.302585092994046)
end
return ____exports"
`;
